# _uni

./: README.md
1_course/assembly/practice/asm1/: asm1.cpp  asm1.vcxproj
1_course/assembly/practice/asm3/: asm3.sln  asm3.vcxproj  asm3.vcxproj.filters
1_course/assembly/practice/asm4/: asm4.sln  asm4.vcxproj
1_course/assembly/practice/asm5/: asm5.cpp
1_course/cross-platform_application_development/exam/: B1.txt  B2.txt  M1.txt  M2.txt  output1.txt  outputB.txt  task.cpp
1_course/cross-platform_application_development/labs/laba2/laba2/: CMakeLists.txt  Date.cpp  Date.h
1_course/cross-platform_application_development/labs/laba3/: mainwindow.cpp  mainwindow.h
1_course/cross-platform_application_development/practice/client/: client.cpp  client.h  client.pro  main.cpp
1_course/cross-platform_application_development/practice/laba3-1/: code.rar  mainwindow.cpp  mainwindow.h  person.h  resources.qrc  students.txt
1_course/cross-platform_application_development/practice/lesson14/: Input.txt  taks2.cpp  task.cpp  task1.cpp  test.cpp
1_course/cross-platform_application_development/practice/lesson15/: arsen.cpp  mrak2.txt  mrak3.txt  task1.cpp
1_course/cross-platform_application_development/practice/lesson2/: selection_sort.cpp
1_course/cross-platform_application_development/practice/lesson3/: zuzu2602.cpp
1_course/cross-platform_application_development/practice/lesson4/: laba1.cpp  shabloni.cpp
1_course/cross-platform_application_development/practice/lesson5/: laba2_my_try.cpp  nu.cpp  text.txt  Тесты.docx
1_course/cross-platform_application_development/practice/lesson9/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
1_course/exam_training/: Book.txt  Might.txt  Name.txt  colloc_pazura.cpp
1_course/karpa/: Input.txt
1_course/labs/laba_nom_1/: laba1.cpp  laba2.cpp  palinrom.cpp  tests.cpp  testttt.cpp
1_course/labs/laba_nom_2/: laba1.cpp  laba1better.cpp  laba2.cpp  lol)).cpp  task1.cpp
1_course/labs/laba_nom_3/: Input.txt  Out_sort.txt  laba.cpp  laba2.cpp  labaf.cpp  selection_sort.cpp  smthnew.cpp
1_course/labs/laba_nom_5/: laba.cpp
1_course/tests/06.09.24/: 06.09.24.sln
1_course/tests/test2/: ConsoleApplication2.cpp  task.cpp
2_course/algorithms/: .gitignore.txt
2_course/operation-systems/laba-1/: CMakeLists.txt  main.cpp
2_course/operation-systems/laba-1/Creator/: creator_utils.cpp  creator_utils.h  main.cpp
2_course/operation-systems/laba-1/Reporter/: main.cpp  reporter_utils.cpp  reporter_utils.h
2_course/operation-systems/laba-1/common/: employee.h  file_utils.cpp  file_utils.h
2_course/operation-systems/laba-1/test/: CMakeLists.txt
2_course/operation-systems/laba-1/test/unit/: test_creator.cpp  test_main.cpp  test_reporter.cpp
assembly/practice/asm1/: asm1.sln  asm1.vcxproj.filters
assembly/practice/asm3/: asm3.cpp
assembly/practice/asm4/: asm4.cpp  asm4.vcxproj.filters
assembly/practice/asm5/: asm5.sln  asm5.vcxproj  asm5.vcxproj.filters
assembly/practice/lesson1/: mop1.cpp
assembly/practice/lesson2/: assemb2.cpp  lol.cpp
cross-platform application development/practice/lesson1/: zanyatie1.cpp
cross-platform_application_development/labs/laba1/: input.txt  laba1.cpp
cross-platform_application_development/labs/laba2.1/: laba2-1.cpp
cross-platform_application_development/labs/laba3/: CMakeLists.txt
cross-platform_application_development/practice/laba3-1/: asdfasd.txt  laba3-1.pro
cross-platform_application_development/practice/lesson1/: hw1.cpp
cross-platform_application_development/practice/lesson2/: spisok3_4.cpp  Тесты.docx
cross-platform_application_development/practice/lesson3/: atd260225.cpp
cross-platform_application_development/practice/lesson4/: hw.cpp
cross-platform_application_development/practice/lesson5/: class.cpp  eshe.cpp  laba2.cpp
cross-platform_application_development/practice/lesson9/: main.cpp
exam_training/: Result.txt  ikr.cpp
karpa/: tasks.cpp
labs/laba_nom_1/: 0101.cpp  fibonachi.cpp  laba3.cpp  labaaa.rar  sam1.cpp  tasktask.cpp  telor.cpp
labs/laba_nom_1/sdvsdv/: laba1.cpp  laba3.cpp
labs/laba_nom_2/: laba3.cpp  laba4.cpp
labs/laba_nom_3/: Output.txt  example.txt  laba2better.cpp  lablab.cpp  my_functions.h  t2.cpp  tests.cpp
labs/laba_nom_5/: Input.txt
labs/laba_nom_6/: Output.txt  laba.cpp
tests/06.09.24/06.09.24/: 06.09.24.vcxproj  06.09.24.vcxproj.filters  factorialsdfsdf.cpp
tests/test2/: Input.txt  classes.cpp  taskkk.cpp  wha.cpp
(+1655 files in other folders)
